--- a/examples/webserver-scgi/docker-compose.yml
+++ b/examples/webserver-scgi/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     app:
         image: debian:latest
         container_name: app
-        entrypoint: ["/usr/local/bin/nitrogen", "-scgi"]
+        entrypoint: ["/usr/local/bin/nitrogen", "-scgi"] # Add "-compile" to use bytecode virtual machine
         volumes:
             - ./app:/app
             - ../../bin/nitrogen:/usr/local/bin/nitrogen
