--- a/examples/webserver-cgi/docker-compose.yml
+++ b/examples/webserver-cgi/docker-compose.yml
@@ -11,6 +11,7 @@ services:
             - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
 
     app:
+        build: .
         image: fcgiwrap
         container_name: app
         volumes:
