Use buffer around SCGI conn, optimize & stdlib for webserver examples

--- a/examples/webserver-cgi/docker-compose.yml
+++ b/examples/webserver-cgi/docker-compose.yml
@@ -17,3 +17,6 @@ services:
         volumes:
             - ./app:/app
             - ../../bin/nitrogen:/usr/local/bin/nitrogen
+            - ../../nitrogen:/nitrogen
+        environment:
+            NITROGEN_MODULES: /nitrogen
